[metadata]
name = Raven Hydro Flow Indicators
version = 0.1.0
description = A package for abstraction of Raven model output and collection of flow indicators.
author = Parisa Aberi
author_email = parisa.aberi@machydro.ca
url = https://github.com/parisaaber/hydro-flow-indicators
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-only
keywords =
    hydrology
    climate
    raven
    model
classifiers =
    Development Status :: 4 - Beta

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find_namespace:
install_requires =
    pandas
    numpy
    duckdb
    scipy
    fastapi[all]
    uvicorn
    pydantic
    requests
    pyarrow

[options.packages.find]
where = src
